bug squishing

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ ol#questionList li {
 }
 
 #quizListEntry #quizID { font-size: 50%; color: #666; }
-
+#quizDelete { color: #e00; }
 
 
 
